--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
+  "name": "hipersend-api",
+  "version": "1.0.0",
+  "description": "API created to the project HiperSend",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+      "start": "node server.js",
+      "dev": "nodemon -L --inspect=0.0.0.0 server.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+      "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.18.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
+      "express": "^4.17.3",
+      "getenv": "^1.0.0",
+      "mongoose": "^6.2.6"
   }
 }
